# HX-DataLock

./: .gitignore  AGENTS.md  CONTEXT.md  README.md  pyproject.toml
.github/workflows/: keyring-check.yml  sdk-tests.yml
docs/: ai-coding流程化指南.md  data-flow-v1.zh-CN.md
docs/adr/: 0001-password-wrapped-x25519-keyring.md  0002-nfc-normalized-master-passwords.md  0003-v1-full-data-envelopes-only.md  0004-separate-sender-and-user-datalock-apis.md  0005-minimize-master-password-residency.md  0006-crypto-codec-boundary.md  0007-json-keyrings-and-envelopes.md  0008-language-support-scope.md  0009-public-key-document-for-senders.md  0010-no-v1-key-rotation.md  0011-cli-confirms-master-password.md  0012-password-strength-report-uses-mature-libraries.md  0013-cli-password-env-sdk-explicit-input.md  0014-stable-json-output-parsed-json-input.md  0015-aad-binds-schema-key-and-algorithm.md  0016-no-built-in-compression.md  0017-no-v1-payload-length-padding.md  0018-single-recipient-envelopes.md  0019-no-password-attempt-lockout.md  0020-no-platform-keychain-in-core-sdk.md  0021-stable-cross-language-error-codes.md  0022-signed-security-and-compatibility-manifests.md
docs/agents/: domain.md  triage-labels.md
docs/spec/: v1.md
examples/: decrypt_message.py
examples/knolin/: LockEnvelope.kt  OpenEnvelope.kt
examples/node/: lock_and_open_file.mjs
examples/py/: send_message.py
scripts/: hx-datalock.mjs  hxdl-local.sh  hxdl-manifest-sign.py
sdk/knolin/: README.zh-CN.md  (+2 more)
tests/: test_cli_v1.py  test_cross_language.py  test_github_workflows.py  test_v1_foundation.py
(+68 files in other folders)
