[project]
name = "hx-datalock"
version = "0.1.0"
description = "Write-only encryption SDK for HX-DataLock keyrings and data envelopes."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "cryptography>=42.0.0",
]

[project.scripts]
hxdl = "hx_datalock.cli:main"

[dependency-groups]
dev = [
  "pytest>=9.0.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["sdk/py/src"]
